crates/formatter/tests/snapshots/snapshots__coder__migrations__000441_chat_usage_limits.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- 1. Singleton config table
create table chat_usage_limit_config (
	id bigserial primary key,
	-- Only one row allowed (enforced by CHECK).
	singleton boolean not null check (singleton) default true,
	unique (singleton),
	enabled boolean not null default false,
	-- Limit per user per period, in micro-dollars (1 USD = 1,000,000).
	default_limit_micros bigint not null check (default_limit_micros >= 0)
		default 0,
	-- Period length: 'day', 'week', or 'month'.
	period text not null check (period in ('day', 'week', 'month'))
		default 'month',
	created_at timestamptz not null default now(),
	updated_at timestamptz not null default now()
);

-- Seed a single disabled row so reads never return empty.
insert into chat_usage_limit_config (singleton) values (true);

-- 2. Per-user overrides (inline on users table).
alter table users
	add column chat_spend_limit_micros bigint default null check (
		chat_spend_limit_micros is null or chat_spend_limit_micros > 0
	);

-- 3. Per-group overrides (inline on groups table).
alter table groups
	add column chat_spend_limit_micros bigint default null check (
		chat_spend_limit_micros is null or chat_spend_limit_micros > 0
	);

-- Speed up per-user spend aggregation in the usage-limit hot path.
create index idx_chat_messages_owner_spend
	on chat_messages (chat_id, created_at)
	where total_cost_micros is not null;
