crates/formatter/tests/snapshots/snapshots__coder__migrations__000442_aibridge_model_thoughts.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index idx_aibridge_model_thoughts_interception_id;

drop table aibridge_model_thoughts;
