crates/formatter/tests/snapshots/snapshots__coder__migrations__000443_three_options_for_allowed_workspace_sharing.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
delete from custom_roles
where name = 'organization-service-account' and is_system = true;

alter table organizations
	add column workspace_sharing_disabled boolean not null default false;

-- Migrate back: 'none' -> disabled, everything else -> enabled.
update organizations
set workspace_sharing_disabled = true
where shareable_workspace_owners = 'none';

alter table organizations drop column shareable_workspace_owners;

drop type shareable_workspace_owners;

-- Restore the original single-role trigger from migration 408.
drop trigger if exists trigger_insert_organization_system_roles on organizations;
drop function IF exists insert_organization_system_roles;

create or replace function insert_org_member_system_role()
returns trigger
language plpgsql
as $$
begin
	insert into custom_roles (
		name,
		display_name,
		organization_id,
		site_permissions,
		org_permissions,
		user_permissions,
		member_permissions,
		is_system,
		created_at,
		updated_at
	)
	values
		(
			'organization-member',
			'',
			NEW.id,
			'[]'::jsonb,
			'[]'::jsonb,
			'[]'::jsonb,
			'[]'::jsonb,
			true,
			now(),
			now()
		);
	return NEW;
end;
$$;

create trigger trigger_insert_org_member_system_role
	after insert on organizations
	for each row
	execute function insert_org_member_system_role();
