crates/formatter/tests/snapshots/snapshots__coder__migrations__000443_three_options_for_allowed_workspace_sharing.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create type shareable_workspace_owners as enum (
	'none',
	'everyone',
	'service_accounts'
);

alter table organizations
	add column shareable_workspace_owners shareable_workspace_owners not null default 'everyone';

comment on column organizations.shareable_workspace_owners is 'Controls whose workspaces can be shared: none, everyone, or service_accounts.';

-- Migrate existing data from the boolean column.
update organizations
set shareable_workspace_owners = 'none'
where workspace_sharing_disabled = true;

alter table organizations drop column workspace_sharing_disabled;

-- Defensively rename any existing 'organization-service-account' roles
-- so they don't collide with the new system role.
update custom_roles
set name = name || '-' || id::text
-- lower(name) is part of the existing unique index
where lower(name) = 'organization-service-account';

-- Create skeleton organization-service-account system roles for all
-- existing organizations, mirroring what migration 408 did for
-- organization-member.
insert into custom_roles (
	name,
	display_name,
	organization_id,
	site_permissions,
	org_permissions,
	user_permissions,
	member_permissions,
	is_system,
	created_at,
	updated_at
)
select
	'organization-service-account',
	'',
	id,
	'[]'::jsonb,
	'[]'::jsonb,
	'[]'::jsonb,
	'[]'::jsonb,
	true,
	now(),
	now()
from organizations;

-- Replace the single-role trigger with one that creates both system
-- roles when a new organization is inserted.
drop trigger if exists trigger_insert_org_member_system_role on organizations;
drop function IF exists insert_org_member_system_role;

create or replace function insert_organization_system_roles()
returns trigger
language plpgsql
as $$
begin
	insert into custom_roles (
		name,
		display_name,
		organization_id,
		site_permissions,
		org_permissions,
		user_permissions,
		member_permissions,
		is_system,
		created_at,
		updated_at
	)
	values
		(
			'organization-member',
			'',
			NEW.id,
			'[]'::jsonb,
			'[]'::jsonb,
			'[]'::jsonb,
			'[]'::jsonb,
			true,
			now(),
			now()
		),
		(
			'organization-service-account',
			'',
			NEW.id,
			'[]'::jsonb,
			'[]'::jsonb,
			'[]'::jsonb,
			'[]'::jsonb,
			true,
			now(),
			now()
		);
	return NEW;
end;
$$;

create trigger trigger_insert_organization_system_roles
	after insert on organizations
	for each row
	execute function insert_organization_system_roles();
