crates/formatter/tests/snapshots/snapshots__coder__migrations__000444_usage_events_ai_seats.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index if exists idx_usage_events_ai_seats;

-- Remove hb_ai_seats_v1 rows so the original constraint can be restored.
delete from usage_events where event_type = 'hb_ai_seats_v1';
delete from usage_events_daily where event_type = 'hb_ai_seats_v1';

-- Restore original constraint.
alter table usage_events
	drop constraint usage_event_type_check,
	add constraint usage_event_type_check check (
		event_type in ('dc_managed_agents_v1')
	);

-- Restore the original aggregate function without hb_ai_seats_v1 support.
create or replace function aggregate_usage_event()
returns trigger
language plpgsql
as $$
begin
	if NEW.event_type not in ('dc_managed_agents_v1') then
		raise exception 'Unhandled usage event type in aggregate_usage_event: %',
		NEW.event_type;
	end if;

	insert into usage_events_daily (day, event_type, usage_data)
	values
		(
			date_trunc('day', NEW.created_at at time zone 'UTC')::date,
			NEW.event_type,
			NEW.event_data
		)
	on conflict (day, event_type) do update
	set
		usage_data = case
			when NEW.event_type in ('dc_managed_agents_v1')
				then jsonb_build_object(
					'count',
					coalesce((usage_events_daily.usage_data ->> 'count')::bigint, 0)
					+ coalesce((NEW.event_data ->> 'count')::bigint, 0)
				)
		end;

	return NEW;
end;
$$;
