crates/formatter/tests/snapshots/snapshots__coder__migrations__000444_usage_events_ai_seats.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Expand the CHECK constraint to allow hb_ai_seats_v1.
alter table usage_events
	drop constraint usage_event_type_check,
	add constraint usage_event_type_check check (
		event_type in ('dc_managed_agents_v1', 'hb_ai_seats_v1')
	);

-- Partial index for efficient lookups of AI seat heartbeat events by time.
-- This will be used for the admin dashboard to see seat count over time.
create index idx_usage_events_ai_seats
	on usage_events (event_type, created_at)
	where event_type = 'hb_ai_seats_v1';

-- Update the aggregate function to handle hb_ai_seats_v1 events.
-- Heartbeat events replace the previous value for the same time period.
create or replace function aggregate_usage_event()
returns trigger
language plpgsql
as $$
begin
	-- Check for supported event types and throw error for unknown types.
	if NEW.event_type not in ('dc_managed_agents_v1', 'hb_ai_seats_v1') then
		raise exception 'Unhandled usage event type in aggregate_usage_event: %',
		NEW.event_type;
	end if;

	insert into usage_events_daily (day, event_type, usage_data)
	values
		(
			date_trunc('day', NEW.created_at at time zone 'UTC')::date,
			NEW.event_type,
			NEW.event_data
		)
	on conflict (day, event_type) do update
	set
		usage_data = case
			-- Handle simple counter events by summing the count.
			when NEW.event_type in ('dc_managed_agents_v1')
				then jsonb_build_object(
					'count',
					coalesce((usage_events_daily.usage_data ->> 'count')::bigint, 0)
						+ coalesce((NEW.event_data ->> 'count')::bigint, 0)
				)
			-- Heartbeat events: keep the max value seen that day
			when NEW.event_type in ('hb_ai_seats_v1')
				then jsonb_build_object(
					'count',
					greatest(
						coalesce((usage_events_daily.usage_data ->> 'count')::bigint, 0),
						coalesce((NEW.event_data ->> 'count')::bigint, 0)
					)
				)
		end;

	return NEW;
end;
$$;
