crates/formatter/tests/snapshots/snapshots__coder__migrations__000446_chat_messages_deleted.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
delete from chat_messages where deleted = true;
alter table chat_messages drop column deleted;
