crates/formatter/tests/snapshots/snapshots__coder__migrations__000446_chat_messages_deleted.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table chat_messages add column deleted boolean not null default false;
